뭔가 수정함 ㅋㅋ

--- a/main.tex
+++ b/main.tex
@@ -144,82 +144,83 @@
     \small{\textit{Agent $\leftrightarrow$ Environment: State, Action, Reward의 순환}}
 \end{frame}
 
-% \begin{frame}{유명 교재별 강화학습 정의 (1/4)}
-%     \footnotesize
-%     \begin{tabular}{p{2.8cm}p{7.5cm}}
-%         \toprule
-%         \textbf{저자} & \textbf{정의} \\
-%         \midrule
-%         Sutton \& Barto & "Reinforcement learning problems involve learning \textbf{what to do—how to map situations to actions}—so as to \textbf{maximize a numerical reward signal}." \\
-%         & \textit{→ 상황$\rightarrow$행동을 학습해 보상(수치 신호) 최대화} \\
-%         \midrule
-%         Sutton \& Barto & "Reinforcement learning is a \textbf{computational approach} to understanding and automating \textbf{goal-directed learning} and \textbf{decision-making}." \\
-%         & \textit{→ 목표지향적 학습·의사결정을 이해/자동화하려는 계산적 접근} \\
-%         \bottomrule
-%     \end{tabular}
+\begin{frame}{유명 교재별 강화학습 정의 (1/4)}
+    \footnotesize
+    \begin{tabular}{p{2.8cm}p{7.5cm}}
+        \toprule
+        \textbf{저자} & \textbf{정의} \\
+        \midrule
+        Sutton \& Barto & "Reinforcement learning problems involve learning \textbf{what to do—how to map situations to actions}—so as to \textbf{maximize a numerical reward signal}." \\
+        & \textit{→ 상황$\rightarrow$행동을 학습해 보상(수치 신호) 최대화} \\
+        \midrule
+        Sutton \& Barto & "Reinforcement learning is a \textbf{computational approach} to understanding and automating \textbf{goal-directed learning} and \textbf{decision-making}." \\
+        & \textit{→ 목표지향적 학습·의사결정을 이해/자동화하려는 계산적 접근} \\
+        \bottomrule
+    \end{tabular}
     
-%     \vspace{0.3em}
-%     \tiny{\textit{Source: Reinforcement Learning: An Introduction (2nd ed.)}}
-% \end{frame}
+    \vspace{0.3em}
+    \tiny{\textit{Source: Reinforcement Learning: An Introduction (2nd ed.)}}
+\end{frame}
 
-% \begin{frame}{유명 교재별 강화학습 정의 (2/4)}
-%     \footnotesize
-%     \begin{tabular}{p{2.8cm}p{7.5cm}}
-%         \toprule
-%         \textbf{저자} & \textbf{정의} \\
-%         \midrule
-%         Kaelbling, Littman, Moore & "Reinforcement learning is the problem faced by \textbf{an agent that learns behavior} through \textbf{trial-and-error interactions} with a dynamic environment." \\
-%         & \textit{→ 동적 환경과 상호작용하며 시행착오로 행동을 학습} \\
-%         \midrule
-%         David Silver & "The agent's job is to \textbf{maximise cumulative reward}." \\
-%         & \textit{→ 에이전트의 목적은 누적 보상 최대화} \\
-%         \midrule
-%         David Silver & "The \textbf{environment is initially unknown} / The agent \textbf{interacts} with the environment / The agent \textbf{improves its policy}" \\
-%         & \textit{→ 환경이 미지인 상태에서 상호작용으로 정책을 개선} \\
-%         \bottomrule
-%     \end{tabular}
+\begin{frame}{유명 교재별 강화학습 정의 (2/4)}
+    \footnotesize
+    \begin{tabular}{p{2.8cm}p{7.5cm}}
+        \toprule
+        \textbf{저자} & \textbf{정의} \\
+        \midrule
+        Kaelbling, Littman, Moore & "Reinforcement learning is the problem faced by \textbf{an agent that learns behavior} through \textbf{trial-and-error interactions} with a dynamic environment." \\
+        & \textit{→ 동적 환경과 상호작용하며 시행착오로 행동을 학습} \\
+        \midrule
+        David Silver & "The agent's job is to \textbf{maximise cumulative reward}." \\
+        & \textit{→ 에이전트의 목적은 누적 보상 최대화} \\
+        \midrule
+        David Silver & "The \textbf{environment is initially unknown} / The agent \textbf{interacts} with the environment / The agent \textbf{improves its policy}" \\
+        & \textit{→ 환경이 미지인 상태에서 상호작용으로 정책을 개선} \\
+        \bottomrule
+    \end{tabular}
     
-%     \vspace{0.3em}
-%     \tiny{\textit{Sources: "Reinforcement Learning: A Survey" (JAIR); UCL RL Lecture 1}}
-% \end{frame}
+    \vspace{0.3em}
+    \tiny{\textit{Sources: "Reinforcement Learning: A Survey" (JAIR); UCL RL Lecture 1}}
+\end{frame}
 
-% \begin{frame}{유명 교재별 강화학습 정의 (3/4)}
-%     \footnotesize
-%     \begin{tabular}{p{2.8cm}p{7.5cm}}
-%         \toprule
-%         \textbf{저자} & \textbf{정의} \\
-%         \midrule
-%         Bertsekas & "Reinforcement learning, \textbf{approximate dynamic programming}, and \textbf{neuro-dynamic programming}." \\
-%         & \textit{→ RL을 (근사)동적계획/최적제어 큰 틀(ADP·NDP)로 규정} \\
-%         \midrule
-%         Bertsekas & "Our subject has benefited greatly from the \textbf{interplay of ideas from optimal control and from artificial intelligence}." \\
-%         & \textit{→ 최적제어와 AI의 접점/상호작용에서 발전} \\
-%         \midrule
-%         Andrew Ng & "Our goal in reinforcement learning is to \textbf{choose actions over time} so as to \textbf{maximize the expected value of the total payoff}." \\
-%         & \textit{→ 시간에 걸쳐 행동을 선택해 기대 보상 총합 최대화} \\
-%         \bottomrule
-%     \end{tabular}
+
+\begin{frame}{유명 교재별 강화학습 정의 (3/4)}
+    \footnotesize
+    \begin{tabular}{p{2.8cm}p{7.5cm}}
+        \toprule
+        \textbf{저자} & \textbf{정의} \\
+        \midrule
+        Bertsekas & "Reinforcement learning, \textbf{approximate dynamic programming}, and \textbf{neuro-dynamic programming}." \\
+        & \textit{→ RL을 (근사)동적계획/최적제어 큰 틀(ADP·NDP)로 규정} \\
+        \midrule
+        Bertsekas & "Our subject has benefited greatly from the \textbf{interplay of ideas from optimal control and from artificial intelligence}." \\
+        & \textit{→ 최적제어와 AI의 접점/상호작용에서 발전} \\
+        \midrule
+        Andrew Ng & "Our goal in reinforcement learning is to \textbf{choose actions over time} so as to \textbf{maximize the expected value of the total payoff}." \\
+        & \textit{→ 시간에 걸쳐 행동을 선택해 기대 보상 총합 최대화} \\
+        \bottomrule
+    \end{tabular}
     
-%     \vspace{0.3em}
-%     \tiny{\textit{Sources: Reinforcement Learning and Optimal Control (draft); Stanford CS229 Notes}}
-% \end{frame}
+    \vspace{0.3em}
+    \tiny{\textit{Sources: Reinforcement Learning and Optimal Control (draft); Stanford CS229 Notes}}
+\end{frame}
 
-% \begin{frame}{유명 교재별 강화학습 정의 (4/4)}
-%     \footnotesize
-%     \begin{tabular}{p{2.8cm}p{7.5cm}}
-%         \toprule
-%         \textbf{저자} & \textbf{정의} \\
-%         \midrule
-%         Szepesvári & "Reinforcement learning is a learning paradigm concerned with \textbf{learning to control a system} so as to maximize a numerical performance measure." \\
-%         & \textit{→ 시스템을 제어하는 정책을 학습해 장기 성능지표(수치) 최대화} \\
-%         \midrule
-%         Dayan \& Niv & "Animals learn to \textbf{choose actions to obtain rewards} and \textbf{avoid punishments}." \\
-%         & \textit{→ 동물이 보상 획득/벌 회피를 위해 행동 선택을 학습하는 틀} \\
-%         \midrule
-%         Mnih et al. & "The theory of reinforcement learning provides a \textbf{normative account} of how agents may \textbf{optimize their control} of an environment." \\
-%         & \textit{→ 에이전트가 환경 제어를 최적화하는 방법에 대한 규범적 이론} \\
-%         \bottomrule
-%     \end{tabular}
+\begin{frame}{유명 교재별 강화학습 정의 (4/4)}
+    \footnotesize
+    \begin{tabular}{p{2.8cm}p{7.5cm}}
+        \toprule
+        \textbf{저자} & \textbf{정의} \\
+        \midrule
+        Szepesvári & "Reinforcement learning is a learning paradigm concerned with \textbf{learning to control a system} so as to maximize a numerical performance measure." \\
+        & \textit{→ 시스템을 제어하는 정책을 학습해 장기 성능지표(수치) 최대화} \\
+        \midrule
+        Dayan \& Niv & "Animals learn to \textbf{choose actions to obtain rewards} and \textbf{avoid punishments}." \\
+        & \textit{→ 동물이 보상 획득/벌 회피를 위해 행동 선택을 학습하는 틀} \\
+        \midrule
+        Mnih et al. & "The theory of reinforcement learning provides a \textbf{normative account} of how agents may \textbf{optimize their control} of an environment." \\
+        & \textit{→ 에이전트가 환경 제어를 최적화하는 방법에 대한 규범적 이론} \\
+        \bottomrule
+    \end{tabular}
     
     \vspace{0.3em}
     \tiny{\textit{Sources: Algorithms for Reinforcement Learning; Dayan \& Niv (2008); Nature (2015) DQN}}
@@ -569,26 +570,26 @@
     \end{itemize}
 \end{frame}
 
-% \begin{frame}{Preliminaries: 주요 개념}
-%     \textbf{Lipschitz Mapping:}
+\begin{frame}{Preliminaries: 주요 개념}
+    \textbf{Lipschitz Mapping:}
     
-%     두 거리 공간 $(M_1, d_1)$, $(M_2, d_2)$ 사이의 매핑 $T$가 Lipschitz 상수 $L$을 가지면:
-%     $$d_2(T(a), T(b)) \leq L \cdot d_1(a, b), \quad \forall a, b \in M_1$$
+    두 거리 공간 $(M_1, d_1)$, $(M_2, d_2)$ 사이의 매핑 $T$가 Lipschitz 상수 $L$을 가지면:
+    $$d_2(T(a), T(b)) \leq L \cdot d_1(a, b), \quad \forall a, b \in M_1$$
     
-%     \begin{itemize}
-%         \item $L \leq 1$: \textbf{Non-expansion} (비확장)
-%         \item $L < 1$: \textbf{Contraction} (수축)
-%     \end{itemize}
+    \begin{itemize}
+        \item $L \leq 1$: \textbf{Non-expansion} (비확장)
+        \item $L < 1$: \textbf{Contraction} (수축)
+    \end{itemize}
     
-%     \vspace{1em}
-%     \textbf{Other Notations:}
-%     \begin{itemize}
-%         \item $I\{S\}$ - Indicator function: $S$가 참이면 1, 아니면 0
-%         \item $\frac{\partial}{\partial \theta} v$ - Partial derivative w.r.t. $\theta$ (row vector)
-%         \item $\nabla_{\theta} v$ - Gradient (column vector)
-%         \item $X \sim P$ - Random variable $X$ is drawn from distribution $P$
-%     \end{itemize}
-% \end{frame}
+    \vspace{1em}
+    \textbf{Other Notations:}
+    \begin{itemize}
+        \item $I\{S\}$ - Indicator function: $S$가 참이면 1, 아니면 0
+        \item $\frac{\partial}{\partial \theta} v$ - Partial derivative w.r.t. $\theta$ (row vector)
+        \item $\nabla_{\theta} v$ - Gradient (column vector)
+        \item $X \sim P$ - Random variable $X$ is drawn from distribution $P$
+    \end{itemize}
+\end{frame}
 
 \begin{frame}[shrink=20]{Markov Decision Processes (MDP): Recap}
 \small
